tested import of custom module

--- a/MemBrain_1stPart_12-28-21.ipynb
+++ b/MemBrain_1stPart_12-28-21.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "22709efa-c1d4-4a66-aa07-70abdd5709d2",
    "metadata": {},
    "outputs": [],
@@ -69,22 +69,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import My_modules.My_WebScrape_Functions as ws"
+    "import My_WebScrape_Functions as ws"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "7b5dbecd-75d5-4efc-9ff4-4c1f92d76c42",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<module 'My_modules.My_WebScrape_Functions' from '/Users/ShokenLEE/Desktop/Python/My_modules/My_WebScrape_Functions.py'>"
+       "<module 'My_WebScrape_Functions' from '/Users/ShokenLEE/Desktop/Codes/git/AH-search-in-NEproteins/My_WebScrape_Functions.py'>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
