Incorporated Korfali2012 Hs Mm Rn

--- a/MemBrain_3rdPart_01-12-22.ipynb
+++ b/MemBrain_3rdPart_01-12-22.ipynb
@@ -31,9 +31,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# directory\n",
-    "directory = '/Users/ShokenLEE/Desktop/DATA/Bioinformatics/\\\n",
-    "MemBrain AH prediction/'"
+    "# path\n",
+    "path = './IntermediateProducts/Result_Selected_Organisms_SubCellLoc_Korfali2012.csv'"
    ]
   },
   {
@@ -46,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "8715c974-21a5-4623-bca9-4b588c849a84",
    "metadata": {},
    "outputs": [],
@@ -61,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "id": "0b2adfbe-9ef0-4734-ac1d-7b1a4b791ce7",
    "metadata": {},
    "outputs": [],
@@ -83,45 +82,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "f50f0b19-7b36-4041-8559-badaef898881",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.chdir(directory)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "d0794f9e-22c0-4591-825c-126dcea956f6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/Users/ShokenLEE/Desktop/DATA/Bioinformatics/MemBrain AH prediction'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "os.getcwd()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "bcfb3cfe-bfe6-4621-93f4-625fa2693d3f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = 'Result_Selected_Organisms_SubCellLoc.csv'\n",
-    "\n",
-    "df = pd.read_csv(directory + filename)"
+    "df = pd.read_csv(path)"
    ]
   },
   {
@@ -134,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "id": "d8df07a3-81cd-4bd6-8511-79dec7f5acde",
    "metadata": {},
    "outputs": [],
@@ -144,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "id": "81db0762-15b7-45c1-9a74-c6a4b1918125",
    "metadata": {},
    "outputs": [],
@@ -154,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "id": "0eb7a4cd-5c13-4c7e-ba9f-84cdea3d868f",
    "metadata": {},
    "outputs": [
@@ -179,6 +145,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
        "      <th>Uniprot_ID</th>\n",
        "      <th>Organism</th>\n",
        "      <th>Protein_name</th>\n",
@@ -186,6 +153,7 @@
        "      <th>AA_sequence</th>\n",
        "      <th>Prediction</th>\n",
        "      <th>Subcellular_location</th>\n",
+       "      <th>Subcellular_location_Korfali2012</th>\n",
        "      <th>AH_positions</th>\n",
        "      <th>AH_residues</th>\n",
        "    </tr>\n",
@@ -193,6 +161,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>Q8N4K4</td>\n",
        "      <td>Homo sapiens (Human)</td>\n",
        "      <td>Reprimo-like protein</td>\n",
@@ -200,11 +169,13 @@
        "      <td>MNATFLNHSGLEEVDGVGGGAGAALGNRTHGLGTWLGCCPGGAPLA...</td>\n",
        "      <td>0000000000000000000000000000000000000000000000...</td>\n",
        "      <td>Membrane</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>Q8N4S7</td>\n",
        "      <td>Homo sapiens (Human)</td>\n",
        "      <td>Progestin and adipoQ receptor family member 4</td>\n",
@@ -212,11 +183,13 @@
        "      <td>MAFLAGPRLLDWASSPPHLQFNKFVLTGYRPASSGSGCLRSLFYLH...</td>\n",
        "      <td>0000000000000000000000000000000000000000000000...</td>\n",
        "      <td>Membrane</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>Q8N5G0</td>\n",
        "      <td>Homo sapiens (Human)</td>\n",
        "      <td>Small integral membrane protein 20</td>\n",
@@ -224,11 +197,13 @@
        "      <td>MSRNLRTALIFGGFISLIGAAFYPIYFRPLMRLEEYKKEQAINRAG...</td>\n",
        "      <td>0000000000000000000000000000000000000000000000...</td>\n",
        "      <td>Mitochondrion inner membrane</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>Q8N614</td>\n",
        "      <td>Homo sapiens (Human)</td>\n",
        "      <td>Transmembrane protein 156</td>\n",
@@ -236,11 +211,13 @@
        "      <td>MTKTALLKLFVAIVITFILILPEYFKTPKERTLELSCLEVCLQSNF...</td>\n",
        "      <td>0011111100000000000000000000000000000000000000...</td>\n",
        "      <td>Membrane</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>[2, 3, 4, 5, 6, 7]</td>\n",
        "      <td>[K, T, A, L, L, K]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>Q8N7C4</td>\n",
        "      <td>Homo sapiens (Human)</td>\n",
        "      <td>Transmembrane protein 217</td>\n",
@@ -248,6 +225,7 @@
        "      <td>MKQQQWCGMTAKMGTVLSGVFTIMAVDMYLIFEQKHLGNGSCTEIT...</td>\n",
        "      <td>0000000000000000000000000000000000000000000000...</td>\n",
        "      <td>Membrane</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
        "    </tr>\n",
@@ -256,12 +234,12 @@
        "</div>"
       ],
       "text/plain": [
-       "  Uniprot_ID              Organism  \\\n",
-       "0     Q8N4K4  Homo sapiens (Human)   \n",
-       "1     Q8N4S7  Homo sapiens (Human)   \n",
-       "2     Q8N5G0  Homo sapiens (Human)   \n",
-       "3     Q8N614  Homo sapiens (Human)   \n",
-       "4     Q8N7C4  Homo sapiens (Human)   \n",
+       "   Unnamed: 0 Uniprot_ID              Organism  \\\n",
+       "0           0     Q8N4K4  Homo sapiens (Human)   \n",
+       "1           1     Q8N4S7  Homo sapiens (Human)   \n",
+       "2           2     Q8N5G0  Homo sapiens (Human)   \n",
+       "3           3     Q8N614  Homo sapiens (Human)   \n",
+       "4           4     Q8N7C4  Homo sapiens (Human)   \n",
        "\n",
        "                                    Protein_name AH_or_Not  \\\n",
        "0                           Reprimo-like protein    Non-AH   \n",
@@ -284,15 +262,22 @@
        "3  0011111100000000000000000000000000000000000000...   \n",
        "4  0000000000000000000000000000000000000000000000...   \n",
        "\n",
-       "           Subcellular_location        AH_positions         AH_residues  \n",
-       "0                      Membrane                  []                  []  \n",
-       "1                      Membrane                  []                  []  \n",
-       "2  Mitochondrion inner membrane                  []                  []  \n",
-       "3                      Membrane  [2, 3, 4, 5, 6, 7]  [K, T, A, L, L, K]  \n",
-       "4                      Membrane                  []                  []  "
+       "           Subcellular_location Subcellular_location_Korfali2012  \\\n",
+       "0                      Membrane                              NaN   \n",
+       "1                      Membrane                              NaN   \n",
+       "2  Mitochondrion inner membrane                              NaN   \n",
+       "3                      Membrane                              NaN   \n",
+       "4                      Membrane                              NaN   \n",
+       "\n",
+       "         AH_positions         AH_residues  \n",
+       "0                  []                  []  \n",
+       "1                  []                  []  \n",
+       "2                  []                  []  \n",
+       "3  [2, 3, 4, 5, 6, 7]  [K, T, A, L, L, K]  \n",
+       "4                  []                  []  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "372e7870-157e-4904-8862-a3fc5a5962c9",
    "metadata": {
     "tags": []
@@ -320,7 +305,7 @@
        "       'Rattus norvegicus (Rat)'], dtype=object)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "id": "5ef0a732-cc39-4c86-8108-703cfe5e2055",
    "metadata": {},
    "outputs": [
@@ -349,14 +334,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ER or Nuclear proteins are: 469\n"
+      "ER or Nuclear proteins are: 477\n"
      ]
     }
    ],
    "source": [
     "df_ER_or_N = df[df['Subcellular_location'].str.contains('Nucleus') |\n",
-    "                df['Subcellular_location'].str.contains('Endoplasmic reticulum')]\n",
+    "                df['Subcellular_location'].str.contains('Endoplasmic reticulum')|\n",
+    "               df['Subcellular_location_Korfali2012'].str.contains('Nucleus')]\n",
     "print('ER or Nuclear proteins are: ' + str(len(df_ER_or_N)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "0a286e73-7122-498d-8f30-4410525dbb75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_ER_or_N.to_csv('./FinalOutput/ER_or_NE_Korfali2012.csv')"
    ]
   },
   {
