Sorted metazoans from organisms

--- a/MemBrain_.ipynb
+++ b/MemBrain_.ipynb
@@ -2,28 +2,56 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 55,
    "id": "ba82341f-720d-477c-af55-4180e3bee9d7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, requests, json\n",
+    "import os, re, requests, json\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from urllib.request import urlopen\n",
-    "from time import sleep\n",
-    "\n",
-    "WEBSITE_API = \"https://rest.uniprot.org/uniprotkb/\"\n",
-    "\n",
+    "from time import sleep"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "47a7e9cc-255f-4078-91a8-dd96d6989c8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_url(url, **kwargs):\n",
-    "  response = requests.get(url, **kwargs);\n",
+    "    '''\n",
+    "    Obatin a response from a given url\n",
+    "    '''\n",
+    "    response = requests.get(url, **kwargs);\n",
     "\n",
-    "  if not response.ok:\n",
-    "    print(response.text)\n",
-    "    response.raise_for_status()\n",
-    "    sys.exit()\n",
+    "    if not response.ok:\n",
+    "        print(response.text)\n",
+    "        response.raise_for_status()\n",
+    "        sys.exit()\n",
     "\n",
-    "  return response"
+    "    return response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bfc780fb-b667-4095-94c0-53d749df53d7",
+   "metadata": {},
+   "source": [
+    "# Step 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb956bbe-be31-43a3-ab16-c8dbc605bb93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# uniprot API URL\n",
+    "WEBSITE_API = \"https://rest.uniprot.org/uniprotkb/\""
    ]
   },
   {
@@ -41,6 +69,7 @@
     }
    ],
    "source": [
+    "# raw data import\n",
     "files = os.listdir('./SourceData/Results from the paper/')\n",
     "print(len(files))"
    ]
@@ -49,7 +78,13 @@
    "cell_type": "code",
    "execution_count": 47,
    "id": "e43c9279-6a94-4ccc-94ab-65d5fe1bf864",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -180,6 +215,7 @@
     "# prepare a dataframe and array for the ID not found in uniprot\n",
     "df = pd.DataFrame()\n",
     "\n",
+    "# scan raw data files, judge AH_or_not, and get the gene info from uniprot based on the ID called \"entry\"\n",
     "for i, file in enumerate(files):\n",
     "    \n",
     "    # check the file format\n",
@@ -296,6 +332,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
     "df.to_csv('./IntermediateProducts/Results_step_1.csv', index=False)"
    ]
   },
@@ -309,17 +346,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4d92eb5d-ade6-4046-8f49-52e72fb2ca4c",
+   "execution_count": 8,
+   "id": "8ca25549-f5ee-4ad1-9e21-3b384312294d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import the df from step1\n"
+    "WEBSITE_API = 'https://rest.uniprot.org/taxonomy/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
+   "id": "4d92eb5d-ade6-4046-8f49-52e72fb2ca4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the df from step1\n",
+    "df = pd.read_csv('./IntermediateProducts/Results_step_1.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
    "id": "839c6659-60c3-4876-8a0d-0bab3b938900",
    "metadata": {},
    "outputs": [
@@ -332,21 +380,136 @@
     }
    ],
    "source": [
-    "# create organism list and examine it manually\n",
+    "# create organism list\n",
     "organism_list = df['Organism'].unique().tolist()\n",
-    "print(len(organism_list))\n",
+    "print(len(organism_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "dc584f3d-a72d-40ff-9ce1-fc7d72451d66",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 Arabidopsis thaliana ['Eukaryota', 'cellular organisms']\n",
+      "100 Salmonella phage P22 ['Duplodnaviria', 'Viruses']\n",
+      "200 Acropora millepora ['Eukaryota', 'cellular organisms']\n",
+      "300 Streptococcus pneumoniae  ['Bacteria', 'cellular organisms']\n",
+      "400 Acidianus bottle-shaped virus  []\n",
+      "500 Petunia integrifolia ['Eukaryota', 'cellular organisms']\n",
+      "600 Haloquadratum walsbyi  ['Archaea', 'cellular organisms']\n",
+      "700 Xanthomonas campestris pv. campestris  ['Bacteria', 'cellular organisms']\n",
+      "800 Friend murine leukemia virus  ['Riboviria', 'Viruses']\n",
+      "900 Oceanobacillus iheyensis  ['Bacteria', 'cellular organisms']\n",
+      "1000 Artemia salina ['Eukaryota', 'cellular organisms']\n",
+      "1100 Citrifermentans bemidjiense  ['Bacteria', 'cellular organisms']\n",
+      "1200 Quaranfil virus  ['Riboviria', 'Viruses']\n",
+      "1300 Planococcus maritimus ['Bacteria', 'cellular organisms']\n",
+      "1400 Macaca radiata ['Eukaryota', 'cellular organisms']\n",
+      "1500 Dechloromonas aromatica  ['Bacteria', 'cellular organisms']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# a list for storage\n",
+    "lineage_list = list()\n",
     "\n",
-    "# exclude \n",
+    "# regex for extracing organism name WITHOUT items in parenthesis\n",
+    "regex = re.compile(r'([^()]+)(\\(.+\\))?')\n",
     "\n",
-    "## Export\n",
+    "# scan organism list and get lineage from Uniprot Taxonomy\n",
+    "for i, organism in enumerate(organism_list):\n",
+    "    # extract organism name WITHOUT items in parenthesis such as strain name\n",
+    "    mo = regex.search(organism)\n",
+    "    if mo is None:\n",
+    "        lineage_list.append('Unknown')\n",
+    "        continue\n",
+    "    else: \n",
+    "        organism = mo.group(1)\n",
+    "    \n",
+    "    # get response that contains lineage\n",
+    "    try:\n",
+    "        r = get_url(f'{WEBSITE_API}/search?query=(scientific:\"{organism}\")&fields=lineage')\n",
+    "        result = r.json()\n",
+    "    except requests.exceptions.ConnectionError:\n",
+    "        r.status_code = \"Connection refused\"\n",
+    "        break\n",
+    "    \n",
+    "    # extract lineage from the result\n",
+    "    lineage = list()\n",
+    "    lineage_full = ''\n",
+    "    try:\n",
+    "        for l in result['results'][0]['lineage']:\n",
+    "            name = l['scientificName']\n",
+    "            lineage.append(name)\n",
+    "        lineage_full = ', '.join(lineage)\n",
+    "    except:\n",
+    "        lineage_full = 'NotFound' # in case the result is empty\n",
+    "        \n",
+    "    # add to the found lineage to the list\n",
+    "    lineage_list.append(lineage_full)\n",
+    "    \n",
+    "    # log every 100\n",
+    "    if i % 100 == 0: print(i, organism, lineage[-2:])\n",
+    "    \n",
+    "    # take a break, go next\n",
+    "    sleep(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "53082a3a-e6cb-46bb-8455-7f25d8a8b719",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 122 entries, 4 to 1518\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column    Non-Null Count  Dtype \n",
+      "---  ------    --------------  ----- \n",
+      " 0   Organism  122 non-null    object\n",
+      " 1   Lineage   122 non-null    object\n",
+      "dtypes: object(2)\n",
+      "memory usage: 2.9+ KB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Add to the df_org\n",
     "df_org = pd.DataFrame(organism_list, columns=['Organism'])\n",
-    "df_org.to_csv('./IntermediateProducts/Organism_list.csv')"
+    "df_org['Lineage'] = lineage_list\n",
+    "\n",
+    "# Select metazoans\n",
+    "df_org_metazoa = df_org[df_org['Lineage'].str.contains('Metazoa')]\n",
+    "print(df_org_metazoa.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "id": "fdef9830-f9f5-4edb-a00a-ac4b2f9df512",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "df_org.to_csv('./IntermediateProducts/Organisms_and_Lineage.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc584f3d-a72d-40ff-9ce1-fc7d72451d66",
+   "id": "a966d8f6-2201-4adb-93c6-eff449830e0e",
    "metadata": {},
    "outputs": [],
    "source": []
