--- a/MemBrain_.ipynb
+++ b/MemBrain_.ipynb
@@ -508,8 +508,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 147,
    "id": "a966d8f6-2201-4adb-93c6-eff449830e0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 2733 entries, 0 to 2732\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column           Non-Null Count  Dtype \n",
+      "---  ------           --------------  ----- \n",
+      " 0   Entry_original   2733 non-null   object\n",
+      " 1   Organism         2733 non-null   object\n",
+      " 2   Gene_name        2733 non-null   object\n",
+      " 3   Protein_name     2733 non-null   object\n",
+      " 4   AH_or_Not        2733 non-null   object\n",
+      " 5   AA_sequence      2733 non-null   object\n",
+      " 6   Prediction       2733 non-null   object\n",
+      " 7   SubCell_Uniprot  2733 non-null   object\n",
+      " 8   Lineage          2733 non-null   object\n",
+      "dtypes: object(9)\n",
+      "memory usage: 213.5+ KB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Merge df_org_metazoa with the main df\n",
+    "# by doing so, genes from metazoans are sorted\n",
+    "df_metazoanGenes = df.merge(df_org_metazoa, how='inner', on='Organism')\n",
+    "print(df_metazoanGenes.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "id": "0217de85-b539-4c77-9918-74fffda13cbb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# remove Lineage column\n",
+    "df_metazoanGenes = df_metazoanGenes.drop(['Lineage'], axis=1)\n",
+    "\n",
+    "# export\n",
+    "df_metazoanGenes.to_csv('./Results_step_2.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9980140a-2cec-495d-953d-0bc5d85ae1f4",
    "metadata": {},
    "outputs": [],
    "source": []
