Korfali2012, Wilkie2010 done

--- a/MemBrain_.ipynb
+++ b/MemBrain_.ipynb
@@ -2,16 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "id": "ba82341f-720d-477c-af55-4180e3bee9d7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, re, requests, json\n",
+    "import os, re, requests, json, warnings\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from urllib.request import urlopen\n",
-    "from time import sleep"
+    "from time import sleep\n",
+    "\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -1169,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 30,
    "id": "c595c6ce-8191-4dac-9088-b76cdd4220a4",
    "metadata": {},
    "outputs": [],
@@ -1179,104 +1181,6 @@
     "\n",
     "# Human protein atlas\n",
     "df_HPA = pd.read_csv('./IntermediateProducts/HumanProteinAtlas/HPA_val_supp_nucleus.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "id": "f83de76a-bced-43b0-85dc-565150757f85",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Gene</th>\n",
-       "      <th>Uniprot</th>\n",
-       "      <th>Reliability</th>\n",
-       "      <th>IF location score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>A1CF</td>\n",
-       "      <td>Q9NQ94</td>\n",
-       "      <td>Supported</td>\n",
-       "      <td>Nucleoplasm: Supported</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>AAGAB</td>\n",
-       "      <td>Q6PD74</td>\n",
-       "      <td>Supported</td>\n",
-       "      <td>Nuclear speckles: Approved;Cytosol: Supported</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>ABCB6</td>\n",
-       "      <td>Q9NP58</td>\n",
-       "      <td>Validated</td>\n",
-       "      <td>Nucleoplasm: Supported;Golgi apparatus: Valida...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>ABCB8</td>\n",
-       "      <td>Q9NUT2</td>\n",
-       "      <td>Supported</td>\n",
-       "      <td>Nucleus: Approved;Mitochondria: Supported</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>ABCC5</td>\n",
-       "      <td>O15440</td>\n",
-       "      <td>Supported</td>\n",
-       "      <td>Nucleus: Approved;Cell Junctions: Approved;Pla...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Gene Uniprot Reliability  \\\n",
-       "0   A1CF  Q9NQ94   Supported   \n",
-       "1  AAGAB  Q6PD74   Supported   \n",
-       "2  ABCB6  Q9NP58   Validated   \n",
-       "3  ABCB8  Q9NUT2   Supported   \n",
-       "4  ABCC5  O15440   Supported   \n",
-       "\n",
-       "                                   IF location score  \n",
-       "0                             Nucleoplasm: Supported  \n",
-       "1      Nuclear speckles: Approved;Cytosol: Supported  \n",
-       "2  Nucleoplasm: Supported;Golgi apparatus: Valida...  \n",
-       "3          Nucleus: Approved;Mitochondria: Supported  \n",
-       "4  Nucleus: Approved;Cell Junctions: Approved;Pla...  "
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_HPA.head()"
    ]
   },
   {
@@ -1560,7 +1464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 2,
    "id": "1e07277b-68f1-43c1-9fb4-071da3543dfe",
    "metadata": {},
    "outputs": [],
@@ -1568,13 +1472,13 @@
     "# MemBrain\n",
     "df_MB = pd.read_csv('./IntermediateProducts/Results_step_4-1_HPA.csv')\n",
     "\n",
-    "# Human protein atlas\n",
+    "# Schirmer 2003 data\n",
     "df_Schirmer = pd.read_csv('./IntermediateProducts/ProteomePapers/Schirmer_2003.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 3,
    "id": "66803091-d31c-4757-9263-f0eb9cd3fc2f",
    "metadata": {},
    "outputs": [],
@@ -1585,7 +1489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 4,
    "id": "2de9b60c-811a-4e97-8c6b-2339002d0f6f",
    "metadata": {},
    "outputs": [],
@@ -1596,7 +1500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 11,
    "id": "e4a5a9d1-aecd-4564-9f8c-41beec7e8ae9",
    "metadata": {},
    "outputs": [
@@ -1618,18 +1522,23 @@
       "HPA_reliability       0\n",
       "Entry              2726\n",
       "Entry name         2726\n",
-      "dtype: int64\n"
+      "dtype: int64\n",
+      "----- \n",
+      "\n",
+      "The number of genes that are found in Schirmer et al Human genes is  7\n"
      ]
     }
    ],
    "source": [
     "# null check\n",
-    "print(df_MB.isnull().sum())"
+    "print(df_MB.isnull().sum())\n",
+    "print('----- \\n')\n",
+    "print(\"The number of genes that are found in Schirmer et al Human genes is \", len(df_MB) - df_MB['Entry'].isnull().sum())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 12,
    "id": "5dc9f724-7a72-4cb6-b12f-45eb33fd55c2",
    "metadata": {},
    "outputs": [],
@@ -1640,7 +1549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 13,
    "id": "d12e3e45-dad3-48c1-9a35-f53bc4659eba",
    "metadata": {},
    "outputs": [],
@@ -1651,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 14,
    "id": "e4512d95-b21d-4e3c-8acd-30b6da20bb05",
    "metadata": {},
    "outputs": [
@@ -1674,18 +1583,23 @@
       "Entry_x            2726\n",
       "Entry_y            2728\n",
       "Entry name         2728\n",
-      "dtype: int64\n"
+      "dtype: int64\n",
+      "----- \n",
+      "\n",
+      "The number of genes that are found in Schirmer et al Mouse genes is  5\n"
      ]
     }
    ],
    "source": [
     "# null check\n",
-    "print(df_MB.isnull().sum())"
+    "print(df_MB.isnull().sum())\n",
+    "print('----- \\n')\n",
+    "print(\"The number of genes that are found in Schirmer et al Mouse genes is \", len(df_MB) - df_MB['Entry_y'].isnull().sum())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 15,
    "id": "770e0eeb-3fcc-4f25-9041-073b1ac85525",
    "metadata": {},
    "outputs": [],
@@ -1699,7 +1613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 16,
    "id": "0f883c0a-e414-483c-aa90-b29f7b6cbc3c",
    "metadata": {},
    "outputs": [],
@@ -1713,7 +1627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 17,
    "id": "b24b0598-0fc2-4d67-b083-1d80b9a8ee63",
    "metadata": {},
    "outputs": [
@@ -1750,8 +1664,316 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "e52f6c8f-3e96-4f72-90b5-15babe1250a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export\n",
+    "df_MB.to_csv('./IntermediateProducts/Results_step_4-2_Schirmer2003.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "efcd6362-8daa-43e4-89d3-341518e05778",
+   "metadata": {},
+   "source": [
+    "## 4-3. Korfali et al 2012"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "43c1d7f0-e074-4d56-88f7-7849c0990af0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# MemBrain\n",
+    "df_MB = pd.read_csv('./IntermediateProducts/Results_step_4-2_Schirmer2003.csv')\n",
+    "\n",
+    "# Korfali 2012 data\n",
+    "df_Korfali2012 = pd.read_csv('./IntermediateProducts/ProteomePapers/Korfali_2012.csv')\n",
+    "\n",
+    "# Limit the Korfali data to those that have Entry\n",
+    "df_Korfali2012 = df_Korfali2012[df_Korfali2012['Entry_Korfali_2012'] != 'Not_found']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "78a2f3cd-730c-4c73-b666-26f2e9ffe4a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Merge\n",
+    "df_MB = df_MB.merge(df_Korfali2012, how='left', left_on='Entry_Hs', right_on='Entry_Korfali_2012')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "e602c589-f626-4557-84d4-3d753e4d5b59",
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entry_original             0\n",
+      "Organism                   0\n",
+      "Gene_name                  0\n",
+      "Protein_name               0\n",
+      "AH_or_Not                  0\n",
+      "AA_sequence                0\n",
+      "Prediction                 0\n",
+      "Entry_Hs                   0\n",
+      "Entry_Mm                   0\n",
+      "SubCell_Uniprot            0\n",
+      "SubCell_HPA                0\n",
+      "HPA_reliability            0\n",
+      "Subcell_Schirmer2003       0\n",
+      "tissue                  2675\n",
+      "gene name               2675\n",
+      "NE:MM ratio by dNSAF    2675\n",
+      "Entry_Korfali_2012      2675\n",
+      "dtype: int64\n",
+      "----- \n",
+      "\n",
+      "The number of genes that are found in Korfali et al 2012 is  58\n"
+     ]
+    }
+   ],
+   "source": [
+    "# null check\n",
+    "print(df_MB.isnull().sum())\n",
+    "print('----- \\n')\n",
+    "print(\"The number of genes that are found in Korfali et al 2012 is \", len(df_MB) - df_MB['Entry_Korfali_2012'].isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "e4eadba5-70ea-414e-b8cc-5f2b181b316d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#fill NaN\n",
+    "df_MB.fillna('Not_found', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "8a5e1da4-72c5-4422-8b77-9d5b5bda477b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Entry_original', 'Organism', 'Gene_name', 'Protein_name', 'AH_or_Not',\n",
+       "       'AA_sequence', 'Prediction', 'Entry_Hs', 'Entry_Mm', 'SubCell_Uniprot',\n",
+       "       'SubCell_HPA', 'HPA_reliability', 'Subcell_Schirmer2003', 'tissue',\n",
+       "       'gene name', 'NE:MM ratio by dNSAF', 'Entry_Korfali_2012'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_MB.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "bb7401d9-6fab-4363-b8a6-78f49a9333c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_MB = df_MB[['Entry_original', 'Organism', 'Gene_name', 'Protein_name', 'AH_or_Not',\n",
+    "       'AA_sequence', 'Prediction', 'Entry_Hs', 'Entry_Mm', 'SubCell_Uniprot',\n",
+    "       'SubCell_HPA', 'HPA_reliability', 'Subcell_Schirmer2003', 'tissue', 'NE:MM ratio by dNSAF']]\n",
+    "\n",
+    "df_MB = df_MB.rename(columns={'tissue': 'Tissue_Korfali_2012', 'NE:MM ratio by dNSAF': 'NE:MM_ratio_Korfali_2012'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "51dc2f3c-50bf-4f7a-86a3-7934c2473106",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_MB['Subcell_Korfali2012'] = df_MB.apply(lambda x: 'Nuclear membrane' if x['Tissue_Korfali_2012'] != 'Not_found' else 'Not_found', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "a28aeafa-69e3-40de-b3b4-13c57471f49b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export\n",
+    "df_MB.to_csv('./IntermediateProducts/Results_step_4-3_Korfali2012.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fda0cade-bcad-43cd-99c2-bd3f0e522a6e",
+   "metadata": {},
+   "source": [
+    "## 4-4. Wilkie et al 2010"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "57da901b-c67f-4e1b-a296-5a7305554687",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# MemBrain\n",
+    "df_MB = pd.read_csv('./IntermediateProducts/Results_step_4-3_Korfali2012.csv')\n",
+    "\n",
+    "# Wilkie 2010 data\n",
+    "df_Wilkie2010 = pd.read_csv('./IntermediateProducts/ProteomePapers/Wilkie_2010.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "ba221600-1f93-4573-b871-603ec537c284",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Limit the Korfali data to those that have Entry\n",
+    "df_Wilkie2010 = df_Wilkie2010[df_Wilkie2010['Entry_Wilkie'] != 'Not_found']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "af3771d4-c4a9-43d7-b07d-887872e44b1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Merge\n",
+    "df_MB = df_MB.merge(df_Wilkie2010, how='left', left_on='Entry_Hs', right_on='Entry_Wilkie')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "fdeae877-d51f-4588-9c7b-b39ff535d0c8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entry_original                 0\n",
+      "Organism                       0\n",
+      "Gene_name                      0\n",
+      "Protein_name                   0\n",
+      "AH_or_Not                      0\n",
+      "AA_sequence                    0\n",
+      "Prediction                     0\n",
+      "Entry_Hs                       0\n",
+      "Entry_Mm                       0\n",
+      "SubCell_Uniprot                0\n",
+      "SubCell_HPA                    0\n",
+      "HPA_reliability                0\n",
+      "Subcell_Schirmer2003           0\n",
+      "Tissue_Korfali_2012            0\n",
+      "NE:MM_ratio_Korfali_2012       0\n",
+      "Subcell_Korfali2012            0\n",
+      "Entry_Wilkie                2682\n",
+      "Gene_name_obtained          2682\n",
+      "dtype: int64\n",
+      "----- \n",
+      "\n",
+      "The number of genes that are found in Wilike et al 2010 is  51\n"
+     ]
+    }
+   ],
+   "source": [
+    "# null check\n",
+    "print(df_MB.isnull().sum())\n",
+    "print('----- \\n')\n",
+    "print(\"The number of genes that are found in Wilike et al 2010 is \", len(df_MB) - df_MB['Entry_Wilkie'].isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "944c4d6a-6cdb-4ab2-b7e4-e28b94794918",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Entry_original', 'Organism', 'Gene_name', 'Protein_name', 'AH_or_Not',\n",
+      "       'AA_sequence', 'Prediction', 'Entry_Hs', 'Entry_Mm', 'SubCell_Uniprot',\n",
+      "       'SubCell_HPA', 'HPA_reliability', 'Subcell_Schirmer2003',\n",
+      "       'Tissue_Korfali_2012', 'NE:MM_ratio_Korfali_2012',\n",
+      "       'Subcell_Korfali2012', 'Entry_Wilkie', 'Gene_name_obtained',\n",
+      "       'Subcell_Wilkie2010'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# fillna\n",
+    "df_MB.fillna('Not_found', inplace=True)\n",
+    "\n",
+    "# Assign subcell\n",
+    "df_MB['Subcell_Wilkie2010'] = df_MB.apply(lambda x: 'Nuclear membrane' if x['Entry_Wilkie'] != 'Not_found' else 'Not_found', axis=1)\n",
+    "\n",
+    "print(df_MB.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "57d82fc6-6e7e-4371-8617-a201a4ca0ed2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# drop columns and reorder\n",
+    "df_MB = df_MB[['Entry_original', 'Organism', 'Gene_name', 'Protein_name', 'AH_or_Not',\n",
+    "       'AA_sequence', 'Prediction', 'Entry_Hs', 'Entry_Mm', 'SubCell_Uniprot',\n",
+    "       'SubCell_HPA', 'HPA_reliability', 'Subcell_Schirmer2003','Subcell_Korfali2012','Subcell_Wilkie2010',\n",
+    "       'Tissue_Korfali_2012', 'NE:MM_ratio_Korfali_2012',]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "e5a2afed-b7df-4c07-8537-f3e65c5b2005",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export\n",
+    "df_MB.to_csv('./IntermediateProducts/Results_step_4-4_Wilkie2010.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b17d2bad-6584-4f68-afaa-379ee923885d",
    "metadata": {},
    "outputs": [],
    "source": []
