--- a/MemBrain_.ipynb
+++ b/MemBrain_.ipynb
@@ -1171,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "id": "c595c6ce-8191-4dac-9088-b76cdd4220a4",
    "metadata": {},
    "outputs": [],
@@ -1181,6 +1181,25 @@
     "\n",
     "# Human protein atlas\n",
     "df_HPA = pd.read_csv('./IntermediateProducts/HumanProteinAtlas/HPA_val_supp_nucleus.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "61bfdc50-1429-4e47-8876-c7c350ff3e69",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2050\n"
+     ]
+    }
+   ],
+   "source": [
+    "# how many genes have either human or mouse Entry\n",
+    "print(len(df_MB[(df_MB.Entry_Hs != 'Not_found')|(df_MB.Entry_Mm != 'Not_found')]))"
    ]
   },
   {
